--- a/src/scss/CustomFields.scss
+++ b/src/scss/CustomFields.scss
@@ -23,7 +23,7 @@ $custom-control-padding-x-sm: .5rem !default;
 $custom-control-line-height-sm: 1.5 !default;
 
 $custom-control-padding-y-lg: .5rem !default;
-$custom-control-padding-x-lg: .75rem !default;
+$custom-control-padding-x-lg: 1rem !default;
 $custom-control-line-height-lg: 1.5 !default;
 
 $custom-control-border-width: $input-border-width;
