pre-release commit

--- a/src/scss/CustomFields.scss
+++ b/src/scss/CustomFields.scss
@@ -269,11 +269,11 @@ $custom-control-transition: $input-transition, padding .15s ease-out;
             transform: none;
             line-height: 1em;
             font-size: $custom-control-shrink-font-size-base;
-            padding: $custom-control-padding-y $custom-control-padding-x + ($custom-control-label-font-size - $custom-control-shrink-font-size-base * 1.1) 0;
+            padding: add($custom-control-padding-y, -$custom-control-border-width) add($custom-control-padding-x, $custom-control-border-width);
         }
 
         .custom-select {
-            padding-top: $custom-control-font-size-base * .8;
+            padding-top: $custom-control-padding-y * 2;
         }
     }
 
