--- a/src/scss/CustomFields.scss
+++ b/src/scss/CustomFields.scss
@@ -1,6 +1,6 @@
-@import 'node_modules/bootstrap/scss/functions';
-@import 'node_modules/bootstrap/scss/mixins';
-@import 'node_modules/bootstrap/scss/variables';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/variables';
 
 $custom-control-color: $input-color !default;
 
